# Proyecto-Final

./: Ejercicio-1.cpp  POO.cpp  README.md  Ventas.cpp  a.out  biblioteca.cpp  biblioteca2.cpp  codigo.cpp  codigo2.cpp  codigo3.cpp  excel.cpp  final.cpp  finalcopy.cpp  hola  holi.cpp  inventario.csv  inventario.db  kjs.cpp  main.cpp  pascal.cpp  prueba3.cpp  repe  ventas.cpp
Proyecto/: CMakeLists.txt
Proyecto-Final/: CMakeLists.txt
Proyecto-Final/include/: Component.h  DatabaseManager.h  InventoryManager.h  ReportGenerator.h
Proyecto-Final/src/: Component.cpp  DatabaseManager.cpp  InventoryManager.cpp  Main.cpp  ReportGenerator.cpp
Proyecto/include/: DatabaseManager.h  ReportGenerator.h
Proyecto/src/: DatabaseManager.cpp  ReportGenerator.cpp  main.cpp
